--- a/formdex.html
+++ b/formdex.html
@@ -94,13 +94,19 @@
       <label for="form_input">Form</label>
       <select name="form" id="form_input">
         <option value="">All Forms</option>
-        <option value="mega ">Mega Evolutions</option>
-        <option value="gigantamax">Gigantamax</option>
-        <option value="male">Gender Differences</option>
-        <option value="alolan">Alolan Forms</option>
-        <option value="galarian">Galarian Forms</option>
-        <option value="hisuian">Hisuian Forms</option>
-        <option value="paldean">Paldean Forms</option>
+        <option value="Mega Evolution">Mega Evolution</option>
+        <option value="Primal Reversion">Primal Reversion</option>
+        <option value="Gigantamax">Gigantamax</option>
+        <option value="Gender Difference">Gender Difference</option>
+        <option value="Regional Form">Regional Form</option>
+        <option value="Alolan Form">Alolan Form</option>
+        <option value="Galarian Form">Galarian Form</option>
+        <option value="Hisuian Form">Hisuian Form</option>
+        <option value="Paldean Form">Paldean Form</option>
+        <option value="Variation">Variation</option>
+        <option value="Form Change">Form Change</option>
+        <option value="Fusion">Fusion</option>
+        <option value="Special Form">Special Form</option>
       </select>
       </br>
       <label for="category_input">Category</label>
@@ -110,7 +116,308 @@
       <label for="gen_input">Generation</label>
       <input id="gen_input" type="text" placeholder="Gen #"/>
       <label for="ability_input">Ability</label>
-      <input id="ability_input" type="text" placeholder="ability"/>
+      <select name="ability" id="ability_input">
+        <option value=""></option>
+        <option value="Adaptability">Adaptability</option>
+        <option value="Aerilate">Aerilate</option>
+        <option value="Aftermath">Aftermath</option>
+        <option value="Air Lock">Air Lock</option>
+        <option value="Analytic">Analytic</option>
+        <option value="Anger Point">Anger Point</option>
+        <option value="Anger Shell">Anger Shell</option>
+        <option value="Anticipation">Anticipation</option>
+        <option value="Arena Trap">Arena Trap</option>
+        <option value="Armor Tail">Armor Tail</option>
+        <option value="Aroma Veil">Aroma Veil</option>
+        <option value="As One">As One</option>
+        <option value="Aura Break">Aura Break</option>
+        <option value="Bad Dreams">Bad Dreams</option>
+        <option value="Ball Fetch">Ball Fetch</option>
+        <option value="Battery">Battery</option>
+        <option value="Battle Armor">Battle Armor</option>
+        <option value="Battle Bond">Battle Bond</option>
+        <option value="Beads of Ruin">Beads of Ruin</option>
+        <option value="Beast Boost">Beast Boost</option>
+        <option value="Berserk">Berserk</option>
+        <option value="Big Pecks">Big Pecks</option>
+        <option value="Blaze">Blaze</option>
+        <option value="Bulletproof">Bulletproof</option>
+        <option value="Cheek Pouch">Cheek Pouch</option>
+        <option value="Chilling Neigh">Chilling Neigh</option>
+        <option value="Chlorophyll">Chlorophyll</option>
+        <option value="Clear Body">Clear Body</option>
+        <option value="Cloud Nine">Cloud Nine</option>
+        <option value="Color Change">Color Change</option>
+        <option value="Comatose">Comatose</option>
+        <option value="Commander">Commander</option>
+        <option value="Competitive">Competitive</option>
+        <option value="Compound Eyes">Compound Eyes</option>
+        <option value="Contrary">Contrary</option>
+        <option value="Corrosion">Corrosion</option>
+        <option value="Costar">Costar</option>
+        <option value="Cotton Down">Cotton Down</option>
+        <option value="Cud Chew">Cud Chew</option>
+        <option value="Curious Medicine">Curious Medicine</option>
+        <option value="Cursed Body">Cursed Body</option>
+        <option value="Cute Charm">Cute Charm</option>
+        <option value="Damp">Damp</option>
+        <option value="Dancer">Dancer</option>
+        <option value="Dark Aura">Dark Aura</option>
+        <option value="Dauntless Shield">Dauntless Shield</option>
+        <option value="Dazzling">Dazzling</option>
+        <option value="Defeatist">Defeatist</option>
+        <option value="Defiant">Defiant</option>
+        <option value="Delta Stream">Delta Stream</option>
+        <option value="Desolate Land">Desolate Land</option>
+        <option value="Disguise">Disguise</option>
+        <option value="Download">Download</option>
+        <option value="Dragon's Maw">Dragon's Maw</option>
+        <option value="Drizzle">Drizzle</option>
+        <option value="Drought">Drought</option>
+        <option value="Dry Skin">Dry Skin</option>
+        <option value="Early Bird">Early Bird</option>
+        <option value="Earth Eater">Earth Eater</option>
+        <option value="Effect Spore">Cute Charm</option>
+        <option value="Electric Surge">Electric Surge</option>
+        <option value="Electromorphosis">Electromorphosis</option>
+        <option value="Emergency Exit">Emergency Exit</option>
+        <option value="Fairy Aura">Fairy Aura</option>
+        <option value="Filter">Filter</option>
+        <option value="Flame Body">Flame Body</option>
+        <option value="Flare Boost">Flare Boost</option>
+        <option value="Flash Fire">Flash Fire</option>
+        <option value="Flower Gift">Flower Gift</option>
+        <option value="Flower Veil">Flower Veil</option>
+        <option value="Fluffy">Fluffy</option>
+        <option value="Forecast">Forecast</option>
+        <option value="Forewarn">Forewarn</option>
+        <option value="Friend Guard">Friend Guard</option>
+        <option value="Frisk">Frisk</option>
+        <option value="Full Metal Body">Full Metal Body</option>
+        <option value="Fur Coat">Fur Coat</option>
+        <option value="Gale Wings">Gale Wings</option>
+        <option value="Galvanize">Galvanize</option>
+        <option value="Gluttony">Gluttony</option>
+        <option value="Good as Gold">Good as Gold</option>
+        <option value="Gooey">Gooey</option>
+        <option value="Gorilla Tactics">Gorilla Tactics</option>
+        <option value="Grass Pelt">Grass Pelt</option>
+        <option value="Grassy Surge">Grassy Surge</option>
+        <option value="Grim Neigh">Grim Neigh</option>
+        <option value="Guard Dog">Guard Dog</option>
+        <option value="Gulp Missile">Gulp Missile</option>
+        <option value="Guts">Guts</option>
+        <option value="Hadron Engine">Hadron Engine</option>
+        <option value="Harvest">Harvest</option>
+        <option value="Healer">Healer</option>
+        <option value="Heatproof">Heatproof</option>
+        <option value="Heavy Metal">Heavy Metal</option>
+        <option value="Honey Gather">Honey Gather</option>
+        <option value="Huge Power">Huge Power</option>
+        <option value="Hunger Switch">Hunger Switch</option>
+        <option value="Hustle">Hustle</option>
+        <option value="Hydration">Hydration</option>
+        <option value="Hyper Cutter">Hyper Cutter</option>
+        <option value="Ice Body">Ice Body</option>
+        <option value="Ice Face">Ice Face</option>
+        <option value="Ice Scales">Ice Scales</option>
+        <option value="Illuminate">Illuminate</option>
+        <option value="Illusion">Illusion</option>
+        <option value="Immunity">Immunity</option>
+        <option value="Imposter">Imposter</option>
+        <option value="Infiltrator">Infiltrator</option>
+        <option value="Innards Out">Innards Out</option>
+        <option value="Inner Focus">Inner Focus</option>
+        <option value="Insomnia">Insomnia</option>
+        <option value="Intimidate">Intimidate</option>
+        <option value="Intrepid Sword">Intrepid Sword</option>
+        <option value="Iron Barbs">Iron Barbs</option>
+        <option value="Iron Fist">Iron Fist</option>
+        <option value="Justified">Justified</option>
+        <option value="Keen Eye">Keen Eye</option>
+        <option value="Klutz">Klutz</option>
+        <option value="Leaf Guard">Leaf Guard</option>
+        <option value="Levitate">Levitate</option>
+        <option value="Libero">Libero</option>
+        <option value="Light Metal">Light Metal</option>
+        <option value="Lightning Rod">Lightning Rod</option>
+        <option value="Limber">Limber</option>
+        <option value="Lingering Aroma">Lingering Aroma</option>
+        <option value="Liquid Ooze">Liquid Ooze</option>
+        <option value="Liquid Voice">Liquid Voice</option>
+        <option value="Long Reach">Long Reach</option>
+        <option value="Magic Bounce">Magic Bounce</option>
+        <option value="Magic Guard">Magic Guard</option>
+        <option value="Magician">Magician</option>
+        <option value="Magma Armor">Magma Armor</option>
+        <option value="Magnet Pull">Magnet Pull</option>
+        <option value="Marvel Scale">Marvel Scale</option>
+        <option value="Mega Launcher">Mega Launcher</option>
+        <option value="Merciless">Merciless</option>
+        <option value="Mimicry">Mimicry</option>
+        <option value="Minus">Minus</option>
+        <option value="Mirror Armor">Mirror Armor</option>
+        <option value="Misty Surge">Misty Surge</option>
+        <option value="Mold Breaker">Mold Breaker</option>
+        <option value="Moody">Moody</option>
+        <option value="Motor Drive">Motor Drive</option>
+        <option value="Moxie">Moxie</option>
+        <option value="Multiscale">Multiscale</option>
+        <option value="Multitype">Multitype</option>
+        <option value="Mummy">Mummy</option>
+        <option value="Mycelium Might">Mycelium Might</option>
+        <option value="Natural Cure">Natural Cure</option>
+        <option value="Neuroforce">Neuroforce</option>
+        <option value="Neutralizing Gas">Neutralizing Gas</option>
+        <option value="No Guard">No Guard</option>
+        <option value="Normalize">Normalize</option>
+        <option value="Oblivious">Oblivious</option>
+        <option value="Opportunist">Opportunist</option>
+        <option value="Orichalcum Pulse">Orichalcum Pulse</option>
+        <option value="Overcoat">Overcoat</option>
+        <option value="Overgrow">Overgrow</option>
+        <option value="Own Tempo">Own Tempo</option>
+        <option value="Parental Bond">Parental Bond</option>
+        <option value="Pastel Veil">Pastel Veil</option>
+        <option value="Perish Body">Perish Body</option>
+        <option value="Pickpocket">Pickpocket</option>
+        <option value="Pickup">Pickup</option>
+        <option value="Pixilate">Pixilate</option>
+        <option value="Plus">Plus</option>
+        <option value="Poison Heal">Poison Heal</option>
+        <option value="Poison Point">Poison Point</option>
+        <option value="Poison Touch">Poison Touch</option>
+        <option value="Power Construct">Power Construct</option>
+        <option value="Power of Alchemy">Power of Alchemy</option>
+        <option value="Power Spot">Power Spot</option>
+        <option value="Prankster">Prankster</option>
+        <option value="Pressure">Pressure</option>
+        <option value="Primordial Sea">Primordial Sea</option>
+        <option value="Prism Armor">Prism Armor</option>
+        <option value="Propeller Tail">Propeller Tail</option>
+        <option value="Protean">Protean</option>
+        <option value="Protosynthesis">Protosynthesis</option>
+        <option value="Psychic Surge">Psychic Surge</option>
+        <option value="Punk Rock">Punk Rock</option>
+        <option value="Pure Power">Pure Power</option>
+        <option value="Purifying Salt">Purifying Salt</option>
+        <option value="Quark Drive">Quark Drive</option>
+        <option value="Queenly Majesty">Queenly Majesty</option>
+        <option value="Quick Draw">Quick Draw</option>
+        <option value="Quick Feet">Quick Feet</option>
+        <option value="Rain Dish">Rain Dish</option>
+        <option value="Rattled">Rattled</option>
+        <option value="Receiver">Receiver</option>
+        <option value="Reckless">Reckless</option>
+        <option value="Refrigerate">Refrigerate</option>
+        <option value="Regenerator">Regenerator</option>
+        <option value="Ripen">Ripen</option>
+        <option value="Rivalry">Rivalry</option>
+        <option value="RKS System">RKS System</option>
+        <option value="Rock Head">Rock Head</option>
+        <option value="Rocky Payload">Rocky Payload</option>
+        <option value="Rough Skin">Rough Skin</option>
+        <option value="Run Away">Run Away</option>
+        <option value="Sand Force">Sand Force</option>
+        <option value="Sand Rush">Sand Rush</option>
+        <option value="Sand Spit">Sand Spit</option>
+        <option value="Sand Stream">Sand Stream</option>
+        <option value="Sand Veil">Sand Veil/option>
+        <option value="Sap Sipper">Sap Sipper</option>
+        <option value="Schooling">Schooling</option>
+        <option value="Scrappy">Scrappy</option>
+        <option value="Screen Cleaner">Screen Cleaner</option>
+        <option value="Seed Sower">Seed Sower</option>
+        <option value="Serene Grace">Serene Grace</option>
+        <option value="Shadow Shield">Shadow Shield</option>
+        <option value="Shadow Tag">Shadow Tag</option>
+        <option value="Sharpness">Sharpness</option>
+        <option value="Shed Skin">Shed Skin</option>
+        <option value="Sheer Force">Sheer Force</option>
+        <option value="Shell Armor">Shell Armor</option>
+        <option value="Shield Dust">Shield Dust</option>
+        <option value="Shields Down">Shields Down</option>
+        <option value="Simple">Simple</option>
+        <option value="Skill Link">Skill Link</option>
+        <option value="Slow Start">Slow Start</option>
+        <option value="Slush Rush">Slush Rush</option>
+        <option value="Sniper">Sniper</option>
+        <option value="Snow Cloak">Snow Cloak</option>
+        <option value="Snow Warning">Snow Warning</option>
+        <option value="Solar Power">Solar Power</option>
+        <option value="Solid Rock">Solid Rock</option>
+        <option value="Soul-Heart">Soul-Heart</option>
+        <option value="Soundproof">Soundproof</option>
+        <option value="Speed Boost">Speed Boost</option>
+        <option value="Stakeout">Stakeout</option>
+        <option value="Stall">Stall</option>
+        <option value="Stalwart">Stalwart</option>
+        <option value="Stamina">Stamina</option>
+        <option value="Stance Change">Stance Change</option>
+        <option value="Static">Static</option>
+        <option value="Steadfast">Steadfast</option>
+        <option value="Steam Engine">Steam Engine</option>
+        <option value="Steelworker">Steelworker</option>
+        <option value="Steely Spirit">Steely Spirit</option>
+        <option value="Stench">Stench</option>
+        <option value="Sticky Hold">Sticky Hold</option>
+        <option value="Storm Drain">Storm Drain</option>
+        <option value="Strong Jaw">Strong Jaw</option>
+        <option value="Sturdy">Sturdy</option>
+        <option value="Suction Cups">Suction Cups</option>
+        <option value="Super Luck">Super Luck</option>
+        <option value="Supersweet Syrup">Supersweet Syrup</option>
+        <option value="Supreme Overlord">Supreme Overlord</option>
+        <option value="Surge Surfer">Surge Surfer</option>
+        <option value="Swarm">Swarm</option>
+        <option value="Sweet Veil">Sweet Veil</option>
+        <option value="Swift Swim">Swift Swim</option>
+        <option value="Sword of Ruin">Sword of Ruin</option>
+        <option value="Symbiosis">Symbiosis</option>
+        <option value="Synchronize">Synchronize</option>
+        <option value="Tablets of Ruin">Tablets of Ruin</option>
+        <option value="Tangled Feet">Tangled Feet</option>
+        <option value="Tangling Hair">Tangling Hair</option>
+        <option value="Technician">Technician</option>
+        <option value="Telepathy">Telepathy</option>
+        <option value="Teravolt">Teravolt</option>
+        <option value="Thermal Exchange">Thermal Exchange</option>
+        <option value="Thick Fat">Thick Fat</option>
+        <option value="Tinted Lens">Tinted Lens</option>
+        <option value="Torrent">Torrent</option>
+        <option value="Tough Claws">Tough Claws</option>
+        <option value="Toxic Boost">Toxic Boost</option>
+        <option value="Toxic Chain">Toxic Chain</option>
+        <option value="Toxic Debris">Toxic Debris</option>
+        <option value="Trace">Trace</option>
+        <option value="Transistor">Transistor</option>
+        <option value="Triage">Triage</option>
+        <option value="Truant">Truant</option>
+        <option value="Turboblaze">Turboblaze</option>
+        <option value="Unaware">Unaware</option>
+        <option value="Unburden">Unburden</option>
+        <option value="Unnerve">Unnerve</option>
+        <option value="Unseen Fist">Unseen Fist</option>
+        <option value="Vessel of Ruin">Vessel of Ruin</option>
+        <option value="Victory Star">Victory Star</option>
+        <option value="Vital Spirit">Vital Spirit</option>
+        <option value="Volt Absorb">Volt Absorb</option>
+        <option value="Wandering Spirit">Wandering Spirit</option>
+        <option value="Water Absorb">Water Absorb</option>
+        <option value="Water Bubble">Water Bubble</option>
+        <option value="Water Compaction">Water Compaction</option>
+        <option value="Water Veil">Water Veil</option>
+        <option value="Weak Armor">Weak Armor</option>
+        <option value="Well-Baked Body">Well-Baked Body</option>
+        <option value="White Smoke">White Smoke</option>
+        <option value="Wimpo Out">Wimp Out</option>
+        <option value="Wind Power">Wind Power</option>
+        <option value="Wind Rider">Wind Rider</option>
+        <option value="Wonder Guard">Wonder Guard</option>
+        <option value="Wonder Skin">Wonder Skin</option>
+        <option value="Zen Mode">Zen Mode</option>
+        <option value="Zero to Hero">Zero to Hero</option>
+      </select>
       </br>
       <label for="height_input">Height</label>
       <input id="height_input" type="height" placeholder="height"/>
